# toonchu_be

./: .env  .gitignore  README.md  configure_cors.py  manage.py  pyproject.toml  schema.yml
.github/ISSUE_TEMPLATE/: 이슈-템플릿.md
.github/workflows/: pr-check.yaml
bookmark/: models.py  serializers.py  tests.py  urls.py  views.py
bookmark/migrations/: 0001_initial.py  0002_initial.py
config/: urls.py
config/settings/: base.py  local.py  prod.py  settings.py  settings_local.py
ncp/: apps.py  serializers.py  views.py
toonchu/: asgi.py  settings.py  urls.py  wsgi.py
users/: delete_users.py  img_utils.py  models.py  oauth_mixins.py  serializers.py  tests.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0002_alter_customuser_profile_img.py  0002_customuser_is_updated_alter_provider_provider.py  0003_alter_customuser_nick_name_alter_customuser_provider.py  0004_customuser_is_active.py  0005_customuser_is_hidden.py
users/tests/: test_ncp_connection.py  tests_img.py
webtoons/: models.py  serializers.py  urls.py  views.py
webtoons/migrations/: 0001_initial.py  0002_remove_webtoontag_tag_remove_webtoontag_webtoon_and_more.py  0002_rename_tag_tags_rename_webtoontag_webtoontags.py  0003_initial.py  0004_alter_webtoon_serialization_cycle.py  0005_alter_tag_category_alter_tag_tag_name.py  0006_alter_tag_tag_name.py  0007_webtoon_is_approved.py  0008_alter_webtoon_is_approved.py  0009_alter_webtoon_platform.py  0010_alter_webtoon_thumbnail.py
webtoons/utils/: image_handler.py
