[tool.poetry]
name = "toonchu"
version = "0.1.0"
description = ""
authors = ["Kimmyeonghyeon0 <Kimmyeonghyeom0>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
env = "^0.1.0"
drf-spectacular = "^0.28.0"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
