[tool.poetry]
name = "toonchu_be"
version = "0.1.0"
description = ""
authors = ["Kimmyeonghyeon0 <Kimmyeonghyeom0>"]
readme = "README.md"

packages = [
    { include = "toonchu_pkg"},
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
env = "^0.1.0"
drf-spectacular = "^0.28.0"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
requests = "^2.32.3"
djangorestframework-simplejwt = "^5.4.0"
black = "^25.1.0"
isort = "^6.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
