[tool.poetry]
name = "toonchu_be"
version = "0.1.0"
description = ""
authors = ["Kimmyeonghyeon0 <Kimmyeonghyeom0>"]
readme = "README.md"

packages = [
    { include = "toonchu_pkg"},
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
env = "^0.1.0"
drf-spectacular = "^0.28.0"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
requests = "^2.32.3"
djangorestframework-simplejwt = "^5.4.0"
black = "^25.1.0"
isort = "^6.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
